# yibian-guo-frontend

./: .gitignore  capacitor.config.ts  index.html  package-lock.json  package.json  patch-troika.mjs  tailwind.config.js  unity-migration-plan.md  vite.config.ts  walk.vmd
android/: capacitor.settings.gradle
android/app/: CMakeLists.txt  build.gradle  capacitor.build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: llama_bridge.cpp  llama_bridge.h
android/app/src/main/java/com/learning/platform/: AppUpdatePlugin.java  IntentHandlerPlugin.java  LlamaPlugin.java  MainActivity.java  NativeLlamaBridge.java  NekoLive2DFloatingPlugin.kt  NekoLive2DFloatingService.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: file_paths.xml  network_security_config.xml
public/live2d-overlay/: overlay.html
scripts/: generate-manifest.ts  package-release.ts  resize-icons.py  sync-version.ts  test-update.mjs
src/: App.tsx  index.css  three-jsx.d.ts  types.ts  vite-env.d.ts
src/ai/: AgnesApi.ts  MiniCPMApi.ts  ModelManager.ts  VisionEngine.ts
src/api/: index.ts
src/components/: AgentBubble.tsx  AgentHeroGlow.tsx  AgentTaskPanel.tsx  AnimatedNumber.tsx  ApiKeySetupModal.tsx  ArtifactBubble.tsx  ArtifactsPanel.tsx  BottomNav.tsx  BouncingDots.tsx  CharacterDetailModal.tsx  ChartGrid.tsx  ChatActionSheet.tsx  ChatDateDivider.tsx  CircularProgress.tsx  CompanionHeader.tsx  CompanionInput.tsx  CompanionMessage.tsx  DocumentPreview.tsx  DownloadCard.tsx  (+25 more)
(+88 files in other folders)
